# perplexity-web-api-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  dist-workspace.toml
.github/workflows/: docker.yml
crates/perplexity-web-api/: Cargo.toml
crates/perplexity-web-api-mcp/: Cargo.toml
crates/perplexity-web-api-mcp/src/: auth.rs  config.rs  main.rs  server.rs  setup.rs
crates/perplexity-web-api/examples/: basic.rs  file_upload.rs  streaming.rs  with_cookies.rs  with_file.rs
crates/perplexity-web-api/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  models.rs  parse.rs  sse.rs  types.rs  upload.rs
crates/perplexity-web-api/tests/: integration.rs
crates/perplexity-web-mcp/: Cargo.toml
crates/perplexity-web-mcp/src/: main.rs
npm/: binary-install.js  package.json  run-perplexity-web-api-mcp.js
