[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.87"
homepage = "https://github.com/mishamyrt/perplexity-web-mcp"
documentation = "https://github.com/mishamyrt/perplexity-web-mcp"
repository = "https://github.com/mishamyrt/perplexity-web-mcp"
authors = ["Mikhael Khrustik <misha@myrt.co>"]
license = "MIT"

[workspace.dependencies]
perplexity-web-api = { path = "crates/perplexity-web-api" }

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rquest = { version = "5.1.0", features = [
    "cookies",
    "json",
    "stream",
    "multipart",
] }
rquest-util = "2.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
futures-util = "0.3"
mime_guess = "2"
regex = "1"
thiserror = "2"
async-stream = "0.3"
pin-project-lite = "0.2"
